--- a/test.ipynb
+++ b/test.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,16 +422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df.to_csv('./Data/cleaned.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,9 +504,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_83128/2966478627.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mloaded_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloaded_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
+     ]
+    }
+   ],
    "source": [
     "loaded_model = pickle.load(open(filename, 'rb'))\n",
     "result = loaded_model.score(x_test, Y_test)"
@@ -657,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +704,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 8
     }
    ],
    "source": [
@@ -688,24 +713,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   Unnamed: 0                                               text  label\n",
-       "0           0  house dem aide even see comey letter jason cha...      1\n",
-       "1           1  ever get feeling life circle roundabout rather...      0\n",
-       "2           2  truth might get fired october tension intellig...      1\n",
-       "3           3  video civilian killed single u airstrike ident...      1\n",
-       "4           4  print iranian woman sentenced six year prison ...      1"
+       "                                                text  label\n",
+       "0  house dem aide even see comey letter jason cha...      1\n",
+       "1  ever get feeling life circle roundabout rather...      0\n",
+       "2  truth might get fired october tension intellig...      1\n",
+       "3  video civilian killed single u airstrike ident...      1\n",
+       "4  print iranian woman sentenced six year prison ...      1"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>text</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>house dem aide even see comey letter jason cha...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>ever get feeling life circle roundabout rather...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>truth might get fired october tension intellig...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>video civilian killed single u airstrike ident...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>print iranian woman sentenced six year prison ...</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>house dem aide even see comey letter jason cha...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ever get feeling life circle roundabout rather...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>truth might get fired october tension intellig...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>video civilian killed single u airstrike ident...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>print iranian woman sentenced six year prison ...</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 9
     }
    ],
    "source": [
@@ -732,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,22 +803,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "1"
+       "array([1])"
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 21
     }
    ],
    "source": [
-    "prediction[0]"
+    "prediction"
    ]
   },
   {
@@ -814,6 +839,15 @@
    ],
    "source": [
     "int(prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_text = \"\"\"week michael flynn resigned national security adviser sealed proposal office outlining way president trump lift sanction russia mr flynn gone caught lying discussion sanction russian ambassador proposal peace plan ukraine russia remains along pushing michael cohen president personal lawyer delivered document felix h sater business associate helped mr trump scout deal russia ukrainian lawmaker trying rise political opposition movement shaped part mr trump former campaign manager paul manafort time mr trump tie russia people connected heightened scrutiny investigation american intelligence agency f b congress associate remain willing eager wade effort behind scene mr trump confounded democrat republican alike repeated praise russian president vladimir v putin desire forge alliance nothing illegal unofficial effort proposal seems tip toward russian interest may set alarm amateur diplomat say goal simply help settle grueling conflict cost life want help bring peace mr cohen asked proposal contains peace plan andrii v artemenko ukrainian lawmaker see leader future ukraine claim evidence name company wire transfer showing corruption ukrainian president petro poroshenko could help oust mr artemenko said received encouragement plan top aide mr putin lot people call russian agent u agent c agent mr artemenko said find good solution country talk mr cohen mr sater said spoken mr trump proposal experience foreign policy mr cohen one several trump associate scrutiny f b counterintelligence examination link russia according law enforcement official denied illicit connection two others involved effort somewhat questionable past mr sater pleaded guilty role stock manipulation scheme decade ago involved mafia mr artemenko spent two half year jail kiev early embezzlement charge later dropped said politically motivated unclear white house take proposal seriously diplomatic freelancing infuriated ukrainian official ukraine ambassador united state valeriy chaly said mr artemenko entitled present alternative peace plan behalf ukraine foreign government including u administration security conference munich friday mr poroshenko warned west appeasement russia american expert say offering russia alternative international agreement ukraine would mistake trump administration sent mixed signal conflict ukraine given mr trump praise mr putin john herbst former american ambassador ukraine said feared new president might eager mend relation russia ukraine expense potentially plan like mr artemenko late january three men associated proposed plan converged loews regency luxury hotel park avenue manhattan business deal made lobby furnished leather couch martini restaurant bar private conference room upper floor mr cohen life two block street trump park avenue lawyer joined trump organization special counsel worked many deal including tower republic georgia mixed martial art venture starring russian fighter considered loyal lieutenant mr trump trust fix difficult problem f b reviewing unverified dossier compiled former british intelligence agent funded mr trump political opponent claim mr cohen met russian representative prague presidential campaign discus russia hacking democratic target russian official named report told new york time never met mr cohen mr cohen insists never visited prague dossier assertion fabrication mr manafort also investigation f b connection russia ukraine mr cohen personal connection ukraine married ukrainian woman worked relative establish ethanol business mr artemenko tall burly arrived manhattan hotel visit washington wife said met first lady melania trump year ago modeling career try meet mr trump attended inauguration visited congress posting facebook admiration mr trump talking peace plan meeting american lawmaker entered parliament year former ukrainian president viktor yanukovych fled moscow amid protest economic alignment russia corruption mr manafort instrumental getting mr yanukovych elected helped shape political bloc sprang oppose new president mr poroshenko wealthy businessman taken far tougher stance toward russia accused mr putin wanting absorb ukraine new russian empire mr artemenko emerged opposition mr manafort nurtured two men never met mr artemenko said entering politics mr artemenko business venture middle east real estate deal miami area worked agent representing top ukrainian athlete colleague parliament describe corrupt untrustworthy simply insignificant appears amassed considerable wealth fashioned image mr trump presenting ukraine answer rising class nationalist leader west even traveled cleveland last summer republican national convention seizing chance meet member mr trump campaign time new leader new approach governance country new principle new negotiator international politics wrote facebook jan time come mr artemenko said saw mr trump opportunity advocate plan peace ukraine help advance political career essentially plan would require withdrawal russian force eastern ukraine ukrainian voter would decide referendum whether crimea ukrainian territory seized russia would leased russia term year ukrainian ambassador mr chaly rejected lease kind gross violation constitution said written answer question time idea pitched pushed openly covertly representing russian interest reaction suggested mr artemenko project also includes dissemination kompromat compromising material purportedly showing mr poroshenko closest associate corrupt new government presumably one le hostile russia might take plan mr sater longtime business associate mr trump connection russia willing help mr artemenko proposal reach white house mr trump sought distance mr sater recent year mr sater sitting room right mr trump said deposition really know looked like mr sater worked real estate development deal trump organization least decade even role stock manipulation scheme came light mr sater born soviet union grew new york served executive firm called bayrock group two floor trump organization trump tower later senior adviser mr trump said working plan trump tower moscow russian real estate developer recently fall one said come halt mr trump presidential campaign mr cohen said trump organization received letter intent project moscow russian real estate developer time determined project feasible mr artemenko said mutual friend put touch mr sater helping advance proposal mr sater said made sense want stop war number one said number two absolutely believe u russia need ally enemy could achieve one stroke would home run speaking mr sater mr artemenko person mr cohen said would deliver plan white house mr cohen said know russian government offered encouragement mr artemenko claim understood promise proof corruption ukrainian president fraud never good right mr cohen said said mr sater given written proposal sealed envelope mr cohen met mr trump oval office early february said left proposal mr flynn office mr cohen said waiting response mr flynn forced post mr cohen mr sater mr artemenko hoping new national security adviser take cause friday president wrote twitter four new candidate job\"\"\""
    ]
   },
   {
